aggiungiamo grafo con matrice di adiacenza

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "*.embeddedhtml": "html",
-        "listtobst.h": "c"
+        "listtobst.h": "c",
+        "graph.h": "c"
     }
 }
