Checkpoint from VS Code for coding agent session

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
     "files.associations": {
         "*.embeddedhtml": "html",
         "listtobst.h": "c",
-        "graph.h": "c"
+        "graph.h": "c",
+        "albero.h": "c",
+        "queue.h": "c"
     }
 }
